--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "include": ["src"],
     "exclude": ["node_modules"],
     "compilerOptions": {
+        "lib": ["DOM", "ES2017"],
         "outDir": "dist",
         "typeRoots": ["./node_modules/]"]
       }
